[tool.poetry]
name = "girlsday-game"
version = "0.1.0"
description = ""
authors = ["Nathan Hoogendorp <Nathan.Hoogendorp@ordina.nl>"]

[tool.poetry.dependencies]
python = "^3.7"
pygame = "^1.9.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^4.3.21"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
